# crossandra-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
benches/: core.rs  fast.rs
benches/assets/brainfuck/: hello_world.bf  huge.bf
benches/assets/samarium/: dtstripped.sm  long.sm  std.sm
src/: common.rs  error.rs  lib.rs  patterns.rs  stream.rs  token.rs  tree.rs
