[package]
name = "crossandra"
version = "0.1.0"
description = "A straightforward tokenization library for seamless text processing."
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
repository = "https://github.com/trag1c/crossandra-rs"
edition = "2021"

[dependencies]
fancy-regex = "0.13.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
rustc-hash = "2.1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fast"
harness = false

[[bench]]
name = "core"
harness = false

[profile.profiling]
inherits = "release"
debug = true
