[package]
name = "crossandra"
version = "1.0.0"
description = "A fast and simple lexical tokenization library."
authors = ["trag1c <dev@jakubr.me>"]
license = "MIT"
repository = "https://github.com/trag1c/crossandra-rs"
edition = "2024"

[dependencies]
fancy-regex = "0.16.2"
rayon = "1.10.0"
rustc-hash = "2.1.0"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "fast"
harness = false

[[bench]]
name = "core"
harness = false

[profile.profiling]
inherits = "release"
debug = true
