[package]
name = "crossandra"
version = "1.0.1"
description = "A fast and simple lexical tokenization library."
authors = ["trag1c <dev@jakubr.me>"]
license = "MIT"
repository = "https://github.com/trag1c/crossandra-rs"
edition = "2024"

[dependencies]
fancy-regex = "0.17.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "fast"
harness = false

[[bench]]
name = "core"
harness = false

[profile.profiling]
inherits = "release"
debug = true
